--- a/src/assets/scss/03_organism/_team-slider.scss
+++ b/src/assets/scss/03_organism/_team-slider.scss
@@ -27,6 +27,7 @@
             width: 100%;
 
             .team-grid-member {
+                cursor: pointer;
                 padding: 0 15px;
                 position: relative;
                 margin: 0 !important;
