--- a/src/assets/scss/03_organism/_team.scss
+++ b/src/assets/scss/03_organism/_team.scss
@@ -2,9 +2,23 @@
     display: flex;
     position: relative;
 
+    h2.people {
+        padding-left: 40px;
+        margin-bottom: 1rem;
+
+        @include breakpoints("tablet") {
+            padding-left: 0;
+            margin-left: 80px;
+        }
+
+        @include breakpoints("lg-desktop") {
+            margin-left: 0;
+        }
+    }
+
     .expanded-team-member {
         align-items: center;
-        background: rgba(get-color-primary("fresh"), 0.8);
+        background: rgba(get-color-primary("fresh"), 0);
         display: flex;
         flex-direction: column-reverse;
         height: 100.5%;
@@ -14,16 +28,13 @@
         width: 100vw;
         z-index: 1;
 
-        div {
-            opacity: 1;
-        }
-
         p {
             text-transform: lowercase;
         }
 
         &-text {
             color: get-color-primary("white");
+            opacity: 0;
             position: initial;
             width: 80%;
 
@@ -87,97 +98,105 @@
             }
         }
 
-        &-image {
+        &-image-div {
             display: flex;
             justify-content: center;
-            position: initial;
+            opacity: 0;
+            position: relative;
 
             @include breakpoints("tablet") {
                 display: block;
-                left: 54%;
+                left: 57%; //animates to 54%
                 max-width: 691px;
                 position: absolute;
-                top: 21%;
+                top: 24%; //animates to 21%
             }
 
             @include breakpoints("laptop") {
-                left: 51%;
+                left: 54%; //animates to 51%
             }
 
             @include breakpoints(1250px) {
-                top: 19%;
+                left: 53%; //animates to 51%
+                top: 24%; //animates to 19%
             }
 
             @include breakpoints("lg-desktop") {
-                left: 46%;
+                left: 48%; //animates to 46%
+                top: 23%; //animates to 19%
             }
 
             @include breakpoints("xl-desktop") {
-                left: 41%;
+                left: 42.2%; //animates to 41%
             }
 
-            img {
-                width: 39%;
+            .expanded-team-member-image {
+                // starts here, animation takes it to 162px
+                // the other final px widths are noted on the following breakpts - they grow by 60px
+                width: 102px;
 
                 @include breakpoints("phone") {
-                    width: 63%;
+                    // 340px
+                    width: 280px;
                 }
 
                 @include breakpoints("sm-tablet") {
-                    width: 75%;
+                    // 429px
+                    width: 369px;
                 }
 
                 @include breakpoints("tablet") {
-                    width: 46%;
+                    // 172px
+                    width: 112px;
                 }
 
                 @include breakpoints("laptop") {
-                    width: 51%;
-                }
-            }
-
-            span {
-                color: get-color("neutral", "light-gray");
-                cursor: pointer;
-                font-family: $font-primary;
-                font-weight: 300;
-                left: 65%;
-                position: absolute;
-                -webkit-font-smoothing: antialiased;
-                -moz-osx-font-smoothing: grayscale;
-
-                @include breakpoints("phone") {
-                    @include font-size("medium");
-                    left: 77%;
-                }
-
-                @include breakpoints("sm-tablet") {
-                    left: 84%;
-                }
-
-                @include breakpoints("tablet") {
-                    @include font-size("smallest");
-                    left: 42%;
-                    top: 2%;
-                }
-
-                @include breakpoints("laptop") {
-                    @include font-size("small");
-                    left: 48%;
-                    top: 0;
-                }
-
-                @include breakpoints("lg-laptop") {
-                    left: 47%;
-                }
-
-                @include breakpoints("sm-desktop") {
-                    top: 2%;
+                    // 239px
+                    width: 179px;
                 }
 
                 @include breakpoints("desktop") {
-                    left: 48%;
-                    top: 1%;
+                    // 303px
+                    width: 243px;
+                }
+
+                @include breakpoints("lg-desktop") {
+                    // 349px
+                    width: 289px;
+                }
+            }
+
+            .expanded-team-member-close-button {
+                cursor: pointer;
+                left: 89%;
+                position: absolute;
+                top: 4%;
+                width: .6rem;
+
+                @include breakpoints("phone") {
+                    left: 90%;
+                    top: 5%;
+                    width: .9rem;
+                }
+
+                @include breakpoints("sm-tablet") {
+                    left: 91%;
+                    top: 5%;
+                }
+
+                @include breakpoints("tablet") {
+                    left: 85%;
+                    top: 6%;
+                    width: .9rem;
+                }
+
+                @include breakpoints("laptop") {
+                    left: 87%;
+                }
+
+                @include breakpoints("lg-desktop") {
+                    left: 89%;
+                    top: 6%;
                 }
             }
         }
