--- a/src/assets/scss/03_organism/_team.scss
+++ b/src/assets/scss/03_organism/_team.scss
@@ -82,6 +82,10 @@
                 @include breakpoints("sm-desktop") {
                     @include font-size("largish");
                 }
+
+                img {
+                    vertical-align: baseline;
+                }
             }
 
             &-position {
@@ -93,7 +97,7 @@
                 @include font-size("smallest");
 
                 img {
-                    vertical-align: super;
+                    vertical-align: baseline;
                     width: 6%;
                 }
             }
