Feature/about page team section safari (#70)
* Team: add Stephanie and fix team duplicate calculation

* Try to fix font render on iOS, correct index of team duplicate

* combine p styling in more specific selector

* expanded team text use <sup> for asterisk

* Team: change h2 from people to "meet the team"

* add back in missing = sign for proper comparison

Co-authored-by: Aaron Weinberger <aweinberger@andculture.com>

--- a/src/assets/scss/03_organism/_team.scss
+++ b/src/assets/scss/03_organism/_team.scss
@@ -28,10 +28,6 @@
         width: 100vw;
         z-index: 1;
 
-        p {
-            text-transform: lowercase;
-        }
-
         &-text {
             color: get-color-primary("white");
             opacity: 0;
@@ -48,6 +44,11 @@
                 @include breakpoints("lg-laptop") {
                     width: 10%;
                 }
+            }
+
+            p {
+                text-transform: lowercase;
+                -webkit-font-smoothing: subpixel-antialiased;
             }
 
             @include breakpoints("tablet") {
@@ -81,6 +82,10 @@
                 @include breakpoints("sm-desktop") {
                     @include font-size("largish");
                 }
+
+                img {
+                    vertical-align: baseline;
+                }
             }
 
             &-position {
@@ -92,7 +97,7 @@
                 @include font-size("smallest");
 
                 img {
-                    vertical-align: super;
+                    vertical-align: baseline;
                     width: 6%;
                 }
             }
