beginnings of switching btwn team members in expanded view, move expanded slider scss to own file, add beginnings of arrow styling

--- a/src/assets/scss/03_organism/__organisms.scss
+++ b/src/assets/scss/03_organism/__organisms.scss
@@ -15,6 +15,7 @@
         "perk-list",
         "slider",
         "team",
+        "team-expanded",
         "team-slider",
         "work-cta",
         "work-featured",
