Change expanded-arrow to be a <button> to fix Firefox bug and be more semantic

--- a/src/assets/scss/03_organism/_team-expanded.scss
+++ b/src/assets/scss/03_organism/_team-expanded.scss
@@ -190,6 +190,8 @@
         }
     }
     .expanded-arrow {
+        background-color: transparent;
+        border: none;
         display: none;
         position: absolute;
         fill: get-color-primary("white");
