expanded-arrow move further right on wider screens

--- a/src/assets/scss/03_organism/_team-expanded.scss
+++ b/src/assets/scss/03_organism/_team-expanded.scss
@@ -239,7 +239,13 @@
                 right: -4%;
             }
             @include breakpoints("lg-desktop") {
-                right: 0px;
+                right: -6px;
+            }
+            @include breakpoints(1700px) {
+                right: -8%;
+            }
+            @include breakpoints("xl-desktop") {
+                right: -14%;
             }
         }
     }
