temporary hover grayscale to help demo, effect likely will be changed

--- a/src/assets/scss/03_organism/_team-slider.scss
+++ b/src/assets/scss/03_organism/_team-slider.scss
@@ -31,6 +31,10 @@
                 position: relative;
                 margin: 0 !important;
 
+                &:hover {
+                    filter: grayscale(100%);
+                }
+
                 img {
                     display: block;
                     width: 100%;
