FAUNADB - started setting up subscription form

--- a/src/assets/scss/02_molecule/__molecules.scss
+++ b/src/assets/scss/02_molecule/__molecules.scss
@@ -19,4 +19,5 @@
         "case-study-image-swatch",
         "learn-about-us",
         "perk",
+        "subscription-form",
         "work-item";
