--- a/src/assets/scss/05_page/_blog.scss
+++ b/src/assets/scss/05_page/_blog.scss
@@ -333,6 +333,10 @@
         }
     }
 
+    &__subscribe {
+        background-color: #f5f5f5;
+    }
+
     footer {
         section {
             @include span-col(11);
