--- a/src/assets/scss/05_page/_blog.scss
+++ b/src/assets/scss/05_page/_blog.scss
@@ -334,7 +334,20 @@
     }
 
     &__subscribe {
-        background-color: #f5f5f5;
+        > div {
+            @include span-col(12);
+            background-color: #f5f5f5;
+            margin-top: 32px;
+
+            @include breakpoints("sm-tablet") {
+                @include span-col(10);
+                @include push-col(1);
+            }
+
+            @include breakpoints("tablet") {
+                margin-top: 80px;
+            }
+        }
     }
 
     footer {
