FAUNADB - minor pr changes

--- a/src/assets/scss/02_molecule/_subscription-form.scss
+++ b/src/assets/scss/02_molecule/_subscription-form.scss
@@ -18,8 +18,8 @@
 
     &__container {
         @include clearfix();
+        @include padding(60px, 30px);
         position: relative;
-        padding: 60px 30px;
 
         fieldset .a-radio + label {
             color: get-color-primary("white");
